增强wiki查看功能,添加图片,标题显示功能

--- a/modules/skm/app/views/skm/wikis/show.pdf.erb
+++ b/modules/skm/app/views/skm/wikis/show.pdf.erb
@@ -10,6 +10,8 @@
     </style>
   </head>
   <body>
-    <div class="markdown-body"><%=raw @wiki.page.formatted_data %></div>
+    <div class="markdown-body">
+      <%=raw show_wiki(@wiki.page,@wiki.name,@wiki.id,:pdf) %>
+    </div>
   </body>
 </html>
