--- a/modules/skm/app/views/skm/wikis/show.html.erb
+++ b/modules/skm/app/views/skm/wikis/show.html.erb
@@ -1,11 +1,11 @@
-<%= common_title%>
+<%= common_title(:show_data=>@wiki.name)%>
 <% require_jscss(:gollum) %>
 
 <!--页面结构-->
 <div class="show-block">
   <table class="page-block-header"><tr>
     <td class="page-block-title">
-      <h2 class="block-title"><%=@wiki.name%></h2>
+      <h2 class="block-title"></h2>
     </td>
     <td class="page-block-button">
       <%= link_to t(:edit), {:action => "edit", :id => @wiki},:class=>"btn"%>
@@ -13,6 +13,8 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <div class="markdown-body"><%=raw @wiki.page.formatted_data %></div>
+    <div class="markdown-body">
+      <%=raw show_wiki(@wiki.page,@wiki.name,@wiki.id) %>
+    </div>
   </div>
 </div>
