增强事故单编辑器,修正图片与链接无法使用的问题

--- a/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
@@ -508,8 +508,13 @@
     border: medium none;
 }
 
-.markdown-body >{
-  h3,h4,h5,h6,pre,span,p,table,blockquote,dl{
-      margin-left: 100px;
-  }
+.markdown-body {
+    h3, h4, h5, h6, pre, span, p, table, blockquote, dl, ul {
+        margin-left: 100px;
+    }
+    ul {
+        ul, p, pre, span {
+            margin-left: 0px;
+        }
+    }
 }
