--- a/modules/skm/app/views/skm/books/_new_form.html.erb
+++ b/modules/skm/app/views/skm/books/_new_form.html.erb
@@ -4,11 +4,11 @@
         <table class="form-table" style="width: 100%;" cellpadding="0" cellspacing="0" border="0">
           <tbody>
           <tr>
-            <td class="label-col"><label for="name"><%= t(:label_irm_book_name) %></label></td>
+            <td class="label-col"><label for="name"><%= t(:label_skm_book_name) %></label></td>
             <td class="data-3col" colspan="3"><%= f.text_field :name, :required => true, :id => "name",:full => true, :style => "width:60%;" %></td>
           </tr>
           <tr>
-            <td class="label-col"><label for="description"><%= t(:label_irm_book_description) %></label></td>
+            <td class="label-col"><label for="description"><%= t(:label_skm_book_description) %></label></td>
             <td class="data-3col" colspan="3"><%= f.text_field :description,  :id => "description", :required => true,:full => true, :style => "width:80%;" %></td>
           </tr>
           <tr>
@@ -29,7 +29,7 @@
       <table class="page-block-header">
         <tr>
           <td class="page-block-title">
-            <h2 class="block-title"><%= t(:label_irm_book_new) %></h2>
+            <h2 class="block-title"><%= t(:label_skm_book_new) %></h2>
           </td>
           <td class="page-block-button">
             <%= content_for :form_buttons %>
