--- a/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
@@ -235,7 +235,7 @@
     color: #000000;
     display: table;
     font-size: 24px;
-    width: 200px;
+    min-width: 200px;
 }
 
 .markdown-body h3 {
