--- a/modules/skm/app/views/skm/book_wikis/destroy.js.erb
+++ b/modules/skm/app/views/skm/book_wikis/destroy.js.erb
@@ -1,6 +1,6 @@
 $(function(){
     $("#wikiBookForm").html("<%= escape_javascript(render :partial=>"skm/book_wikis/mini_form",:locals => {:book=>@book})%>");
 
-    $("#bookWikis").html("<%= escape_javascript(render :partial=>"skm/book_wikis/book_wikis",:locals=>{:datas=>@book.book_wikis.with_wiki})%>");
+    $("#wikis").html("<%= escape_javascript(render :partial=>"skm/book_wikis/book_wikis",:locals=>{:datas=>@book.book_wikis.with_wiki})%>");
 });
 
