--- a/modules/skm/app/views/skm/books/_edit_form.html.erb
+++ b/modules/skm/app/views/skm/books/_edit_form.html.erb
@@ -1,58 +1,62 @@
 <%= common_title %>
-<%= form_for(@book,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
-  <% content_for :form_block_a   do%>
-    <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-                  <tr>
-            <td class="label-col"><label for="name"><%=t(:label_irm_book_name)%></label></td>
-            <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"name"%></td>
+<%= form_for(@book, :url => {:action => "update"}, :builder => CustomFormBuilder) do |f| %>
+    <% content_for :form_block_a do %>
+        <table class="form-table" cellpadding="0" cellspacing="0" border="0">
+          <tbody>
+          <tr>
+            <td class="label-col"><label for="name"><%= t(:label_irm_book_name) %></label></td>
+            <td class="data-col"><%= f.text_field :name, :required => true, :id => "name" %></td>
             <td class="label-col">&nbsp;</td>
             <td class="data-col">&nbsp;</td>
           </tr>
-                  <tr>
-            <td class="label-col"><label for="description"><%=t(:label_irm_book_description)%></label></td>
-            <td class="data-col"><%=f.text_field :description, :required=>true ,:id=>"description"%></td>
+          <tr>
+            <td class="label-col"><label for="description"><%= t(:label_irm_book_description) %></label></td>
+            <td class="data-col"><%= f.text_field :description, :required => true, :id => "description" %></td>
             <td class="label-col">&nbsp;</td>
             <td class="data-col">&nbsp;</td>
           </tr>
-              </tbody>
-    </table>
-  <% end %>
-  <% content_for :form_buttons  do %>
-    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
-    <%= link_back t(:cancel),{},{:class=>"btn cancel"}%>
-  <% end %>
-  <!--页面结构-->
-  <div class="page-block">
-    <table class="page-block-header"><tr>
-      <td class="page-block-title">
-        <h2 class="block-title"><%=t(:label_irm_book_new)%></h2>
-      </td>
-      <td class="page-block-button">
-        <%= content_for :form_buttons   %>
+          </tbody>
+        </table>
+    <% end %>
+    <% content_for :form_buttons do %>
+        <%= link_submit t(:save), {:class => "btn btn-primary"} %>
+        <%= link_back t(:cancel), {}, {:class => "btn cancel"} %>
+    <% end %>
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header">
+        <tr>
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:label_irm_book_new) %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
 
-      </td>
-    </tr></table>
-    <div class="page-block-body">
-      <%= error_for @book %>
-      <div class="sub-page-block">
-        <div class="sub-page-block-header">
-          <%= form_require_info %>
-          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </td>
+        </tr>
+      </table>
+      <div class="page-block-body">
+        <%= error_for @book %>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a %>
+          </div>
         </div>
-        <div class="sub-page-block-body">
-          <%= content_for :form_block_a   %>
-        </div>
+
       </div>
 
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title">
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+          </td>
+        </tr>
+      </table>
     </div>
-
-    <table class="page-block-footer"><tr>
-      <td class="page-block-title">
-      </td>
-      <td class="page-block-button">
-        <%= content_for :form_buttons   %>
-      </td>
-    </tr></table>
-  </div>
 <% end %>
