--- a/modules/skm/app/views/skm/books/index.html.erb
+++ b/modules/skm/app/views/skm/books/index.html.erb
@@ -3,7 +3,7 @@
 <div class="page-block">
   <table class="page-block-header"><tr>
     <td class="page-block-title">
-      <h2 class="block-title"><%= t(:label_irm_book_list) %></h2>
+      <h2 class="block-title"><%= t(:label_skm_book_list) %></h2>
     </td>
     <td class="page-block-button">
       <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
