--- a/app/views/icm/incident_requests/_edit_form.html.erb
+++ b/app/views/icm/incident_requests/_edit_form.html.erb
@@ -71,7 +71,7 @@
           <tr>
             <td class="label-col"><label><%=t(:label_icm_incident_request_estimated_date)%></label></td>
             <td class="data-col">
-              <%= f.text_field(:estimated_date,:size=>12,:class=>"date")%>
+              <%= f.date_field(:estimated_date,:size=>12,:class=>"date")%>
             </td>
           </tr>
           <tr>
