--- a/app/views/irm/list_of_values/_lov_result.html.erb
+++ b/app/views/irm/list_of_values/_lov_result.html.erb
@@ -26,7 +26,7 @@
                 <% else %>
                   <td>
                     <div>
-                      <%= data[field[:key].to_sym] %></div>
+                      <%= handler_lov_data(data[field[:key].to_sym]) %></div>
                   </td>
                 <% end %>
               <% end %>
