--- a/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
@@ -164,7 +164,7 @@
 }
 
 .markdown-body {
-    font-size: 14px;
+    font-size: 10pt;
     line-height: 1.6;
     h1, h2, h3, h4, h5, h6 {
         display: block;
@@ -225,35 +225,34 @@
 
 .markdown-body h1 {
     color: #000000;
-    font-size: 28px;
-    border-top: 8px solid black;
-    padding-top: 5px;
+    font-size: 14pt;
+    border-top: 5px solid black;
 }
 
 .markdown-body h2 {
-    border-top: 8px solid black;
+    border-top: 5px solid black;
     color: #000000;
     display: table;
-    font-size: 24px;
-    min-width: 200px;
+    font-size: 12pt;
+    min-width: 120px;
 }
 
 .markdown-body h3 {
-    font-size: 18px;
+    font-size: 10pt;
     border-bottom: 1px solid black;
 }
 
 .markdown-body h4 {
-    font-size: 16px;
+    font-size: 10pt;
 }
 
 .markdown-body h5 {
-    font-size: 14px;
+    font-size: 10pt;
 }
 
 .markdown-body h6 {
     color: #777777;
-    font-size: 14px;
+    font-size: 10pt;
 }
 
 .markdown-body p, .markdown-body blockquote, .markdown-body ul, .markdown-body ol, .markdown-body dl, .markdown-body table, .markdown-body pre {
@@ -510,11 +509,219 @@
 
 .markdown-body {
     h3, h4, h5, h6, pre, span, p, table, blockquote, dl, ul {
-        margin-left: 100px;
+        margin-left: 50px;
     }
     ul {
         ul, p, pre, span {
             margin-left: 0px;
         }
+    }
+}
+
+// code style
+.markdown-body  {
+    .highlight {
+        span{ margin: 0;}
+        background: none repeat scroll 0 0 #FFFFFF;
+    }
+    .highlight .c {
+        color: #999988;
+        font-style: italic;
+    }
+    .highlight .err {
+        background-color: #E3D2D2;
+        color: #A61717;
+    }
+    .highlight .k {
+        font-weight: bold;
+    }
+    .highlight .o {
+        font-weight: bold;
+    }
+    .highlight .cm {
+        color: #999988;
+        font-style: italic;
+    }
+    .highlight .cp {
+        color: #999999;
+        font-weight: bold;
+    }
+    .highlight .c1 {
+        color: #999988;
+        font-style: italic;
+    }
+    .highlight .cs {
+        color: #999999;
+        font-style: italic;
+        font-weight: bold;
+    }
+    .highlight .gd {
+        background-color: #FFDDDD;
+        color: #000000;
+    }
+    .highlight .gd .x {
+        background-color: #FFAAAA;
+        color: #000000;
+    }
+    .highlight .ge {
+        font-style: italic;
+    }
+    .highlight .gr {
+        color: #AA0000;
+    }
+    .highlight .gh {
+        color: #999999;
+    }
+    .highlight .gi {
+        background-color: #DDFFDD;
+        color: #000000;
+    }
+    .highlight .gi .x {
+        background-color: #AAFFAA;
+        color: #000000;
+    }
+    .highlight .go {
+        color: #888888;
+    }
+    .highlight .gp {
+        color: #555555;
+    }
+    .highlight .gs {
+        font-weight: bold;
+    }
+    .highlight .gu {
+        color: #800080;
+        font-weight: bold;
+    }
+    .highlight .gt {
+        color: #AA0000;
+    }
+    .highlight .kc {
+        font-weight: bold;
+    }
+    .highlight .kd {
+        font-weight: bold;
+    }
+    .highlight .kn {
+        font-weight: bold;
+    }
+    .highlight .kp {
+        font-weight: bold;
+    }
+    .highlight .kr {
+        font-weight: bold;
+    }
+    .highlight .kt {
+        color: #445588;
+        font-weight: bold;
+    }
+    .highlight .m {
+        color: #009999;
+    }
+    .highlight .s {
+        color: #DD1144;
+    }
+    .highlight .na {
+        color: #008080;
+    }
+    .highlight .nb {
+        color: #0086B3;
+    }
+    .highlight .nc {
+        color: #445588;
+        font-weight: bold;
+    }
+    .highlight .no {
+        color: #008080;
+    }
+    .highlight .ni {
+        color: #800080;
+    }
+    .highlight .ne {
+        color: #990000;
+        font-weight: bold;
+    }
+    .highlight .nf {
+        color: #990000;
+        font-weight: bold;
+    }
+    .highlight .nn {
+        color: #555555;
+    }
+    .highlight .nt {
+        color: #000080;
+    }
+    .highlight .nv {
+        color: #008080;
+    }
+    .highlight .ow {
+        font-weight: bold;
+    }
+    .highlight .w {
+        color: #BBBBBB;
+    }
+    .highlight .mf {
+        color: #009999;
+    }
+    .highlight .mh {
+        color: #009999;
+    }
+    .highlight .mi {
+        color: #009999;
+    }
+    .highlight .mo {
+        color: #009999;
+    }
+    .highlight .sb {
+        color: #DD1144;
+    }
+    .highlight .sc {
+        color: #DD1144;
+    }
+    .highlight .sd {
+        color: #DD1144;
+    }
+    .highlight .s2 {
+        color: #DD1144;
+    }
+    .highlight .se {
+        color: #DD1144;
+    }
+    .highlight .sh {
+        color: #DD1144;
+    }
+    .highlight .si {
+        color: #DD1144;
+    }
+    .highlight .sx {
+        color: #DD1144;
+    }
+    .highlight .sr {
+        color: #009926;
+    }
+    .highlight .s1 {
+        color: #DD1144;
+    }
+    .highlight .ss {
+        color: #990073;
+    }
+    .highlight .bp {
+        color: #999999;
+    }
+    .highlight .vc {
+        color: #008080;
+    }
+    .highlight .vg {
+        color: #008080;
+    }
+    .highlight .vi {
+        color: #008080;
+    }
+    .highlight .il {
+        color: #009999;
+    }
+    .highlight .gc {
+        background-color: #EAF2F5;
+        color: #999999;
     }
 }
