--- a/modules/skm/app/views/skm/wikis/show.html.erb
+++ b/modules/skm/app/views/skm/wikis/show.html.erb
@@ -13,7 +13,7 @@
     </td>
   </tr></table>
   <div class="page-block-body">
-    <div class="markdown-body">
+    <div class="markdown-body" style="width: 551pt;text-align: left;margin: 0 auto;">
       <%=raw show_wiki(@wiki.page,@wiki.name,@wiki.id) %>
     </div>
   </div>
