修正wiki显示页面css

--- a/modules/skm/app/views/skm/wikis/show.pdf.erb
+++ b/modules/skm/app/views/skm/wikis/show.pdf.erb
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <div class="markdown-body">
+    <div class="markdown-body" style="width: 551pt;text-align: left;margin: 0 auto;">
       <%=raw show_wiki(@wiki.page,@wiki.name,@wiki.id,:pdf) %>
     </div>
   </body>
