--- a/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
@@ -508,20 +508,39 @@
 }
 
 .markdown-body {
-    h3, h4, h5, h6, pre, span, p, table, blockquote, dl, ul {
+    h3, h4, h5, h6, pre, span, p, table, blockquote, dl, ul, ol {
         margin-left: 50px;
     }
-    ul {
+    ul, ol {
         ul, p, pre, span {
             margin-left: 0px;
         }
     }
+    pre {
+        white-space: pre-wrap;
+        word-wrap: break-word;
+    }
+    img {
+
+    /* This centers the image */
+        display: block;
+
+    /* This adds the border */
+        padding: 8px;
+        border: solid;
+        border-color: #dddddd #aaaaaa #aaaaaa #dddddd;
+        border-width: 1px 2px 2px 1px;
+        background-color: white;
+    }
+
 }
 
 // code style
-.markdown-body  {
+.markdown-body {
     .highlight {
-        span{ margin: 0;}
+        span {
+            margin: 0;
+        }
         background: none repeat scroll 0 0 #FFFFFF;
     }
     .highlight .c {
