--- a/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
@@ -515,6 +515,12 @@
         ul, p, pre, span {
             margin-left: 0px;
         }
+        p{
+            text-indent: 0;
+        }
+    }
+    p {
+        text-indent: 2em;
     }
     pre {
         white-space: pre-wrap;
@@ -531,6 +537,12 @@
         border-color: #dddddd #aaaaaa #aaaaaa #dddddd;
         border-width: 1px 2px 2px 1px;
         background-color: white;
+    }
+    span.img-alt,span.table-alt{
+        text-align: left;
+        display: block;
+        font-style: italic;
+        margin:0;
     }
 
 }
