添加wiki章节单独编辑功能

--- a/modules/bootstrap/app/assets/stylesheets/plugins/gollum/editor.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/plugins/gollum/editor.css.less
@@ -327,6 +327,7 @@ a#function-template:hover span {
     padding: 0.5em; /* I don't really like mixing pct & em here… */
     width: 98%;
     height: 20em;
+    font-size: 10pt;
 }
 
 #gollum-editor input#gollum-editor-submit {
