--- a/modules/skm/app/views/skm/wikis/show.html.erb
+++ b/modules/skm/app/views/skm/wikis/show.html.erb
@@ -8,7 +8,7 @@
       <h2 class="block-title"></h2>
     </td>
     <td class="page-block-button">
-      <%= link_to t(:edit), {:action => "edit", :id => @wiki},:class=>"btn"%>
+      <%= link_to t(:edit), {:action => "edit", :id => @wiki,:x=>"ccc",:y=>"bbbb"},:class=>"btn"%>
       <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
     </td>
   </tr></table>
