--- a/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
@@ -230,11 +230,12 @@
 }
 
 .markdown-body h2 {
-    border-top: 5px solid black;
     color: #000000;
-    display: table;
     font-size: 12pt;
-    min-width: 200px;
+    border: none;
+    clear: both;
+    display: block;
+    margin-top: 0;
 }
 
 .markdown-body h3 {
@@ -511,13 +512,16 @@
     h3, h4, h5, h6, pre, span, p, table, blockquote, dl, ul, ol {
         margin-left: 50px;
     }
-    ul, ol {
+    ul, ol, p, blockquote {
         ul, p, pre, span {
             margin-left: 0px;
         }
         p {
             text-indent: 0;
         }
+    }
+    blockquote p {
+        margin-bottom: 0;
     }
     p {
         text-indent: 2em;
@@ -548,10 +552,33 @@
         font-size: 10pt;
         font-style: normal;
     }
-    h1, h3 {
+    h1,h2, h3 {
         span.hedit-link {
             float: right;
+            margin-right: 10px;
         }
+    }
+    span.float-left, span.float-right {
+        img {
+            margin-left: 0;
+            margin-bottom: 15px;
+        }
+        span.img-alt {
+            display: none;
+        }
+    }
+    h1, h2, h3, h4, h5, h6 {
+        clear: both;
+    }
+
+    .h2-title {
+        border-top: 5px solid black;
+        clear: both;
+        text-align: 0;
+        margin-left: 0;
+        width: 200px;
+        margin-bottom: 0;
+        margin-top: 20px;
     }
 
 }
