--- a/app/views/skm/entry_headers/new_step_4.html.erb
+++ b/app/views/skm/entry_headers/new_step_4.html.erb
@@ -38,7 +38,7 @@
           <table class="show-table">
             <tbody>
                 <tr>
-                  <td class="data-col"><%= raw(e[:entry_content]) %></td>
+                  <td class="data-col"><pre><%= raw(e[:entry_content]) %></pre></td>
                 </tr>
             </tbody>
           </table>
