完善知识库审核： 1、审核页面添加返回操作； 2、自己发布的知识不需要自己审核； 3、修复复制内容到知识库内容中带有多行空格保存出错。

--- a/app/views/skm/entry_headers/knowledge_details.html.erb
+++ b/app/views/skm/entry_headers/knowledge_details.html.erb
@@ -6,7 +6,7 @@
       <h2 class="block-title">[<%= @entry_header.doc_number%>]&nbsp;&nbsp;&nbsp;<%= @entry_header.entry_title %></h2>
     </td>
     <td class="page-block-button">
-
+      <%= link_to t(:back), {:action => "wait_my_approve"},:class=>"btn cancel"%>
     </td>
   </tr>
   </table>
@@ -69,7 +69,9 @@
       <td class="page-block-title">
         <h2 class="block-title"><%= t(:label_skm_entry_header_approve) %></h2>
       </td>
-      <td class="page-block-button"></td>
+      <td class="page-block-button">
+        <%= link_to t(:cancel), {:action => "wait_my_approve"},:class=>"btn cancel"%>
+      </td>
     </tr>
   </table>
   <div class="page-block-body">
