--- a/app/views/skm/entry_headers/wait_my_approve.html.erb
+++ b/app/views/skm/entry_headers/wait_my_approve.html.erb
@@ -28,20 +28,8 @@
          </td>
          <td class="side-content">
            <div id="wait_my_approve_list"></div>
-           <%= datatable("wait_my_approve_list",{:action=>"wait_my_approve_data",:column_id => @column_id},[],{:search_box => "searchBox", :paginator_box=>"paginatorBox",:select=>"multiple"})%>
+           <%= datatable("wait_my_approve_list",{:action=>"wait_my_approve_data",:column_id => @column_id},[],{:search_box => "searchBox", :paginator_box=>"paginatorBox"})%>
            <div id="paginatorBox"></div>
-           <table class="page-block-footer">
-             <tr>
-               <td class="page-block-title"></td>
-               <td class="page-block-button">
-                 <%= form_tag({:action=>"approve_knowledge",:format=>:js},:remote=>true) do %>
-                   <%= hidden_field_tag(:entry_header_ids,:id=>"entry_header_ids")  %>
-                   <%= submit_tag(t(:label_action_approve),{:id=>"btn_approve",:disabled=>true,:class=>"btn btn-primary"})  %>
-                   <%= submit_tag(t(:label_action_reject),{:id=>"btn_reject",:disabled=>true,:class=>"btn"})  %>
-                 <% end %>
-               </td>
-             </tr>
-           </table>
          </td>
        </tr>
     </table>
@@ -49,26 +37,26 @@
 </div>
 
 <script type="text/javascript">
-  $(document).ready(function(){
-      $("#wait_my_approve_list").bind('selectionchange',function(event,ids){
-           $("#entry_header_ids").val(ids.join(","));
-           if (ids.length > 0) {
-             $("#btn_approve").removeAttr("disabled");
-             $("#btn_reject").removeAttr("disabled");
-           }else{
-             $("#btn_approve").attr("disabled",true);
-             $("#btn_reject").attr("disabled",true);
-           }
-      });
-
-      $("#tree-div").bind('nodeListener',function(event, element){
-          var params = {};
-          params['column_id'] = element.attr('id');
-          var current_target = $("#wait_my_approve_list").data("datatable").target;
-          current_target.data.options.searchOptions = params;
-          current_target.loadPage(1);
-      });
-  });
+//  $(document).ready(function(){
+//      $("#wait_my_approve_list").bind('selectionchange',function(event,ids){
+//           $("#entry_header_ids").val(ids.join(","));
+//           if (ids.length > 0) {
+//             $("#btn_approve").removeAttr("disabled");
+//             $("#btn_reject").removeAttr("disabled");
+//           }else{
+//             $("#btn_approve").attr("disabled",true);
+//             $("#btn_reject").attr("disabled",true);
+//           }
+//      });
+//
+//      $("#tree-div").bind('nodeListener',function(event, element){
+//          var params = {};
+//          params['column_id'] = element.attr('id');
+//          var current_target = $("#wait_my_approve_list").data("datatable").target;
+//          current_target.data.options.searchOptions = params;
+//          current_target.loadPage(1);
+//      });
+//  });
 </script>
 <%= content_for :sidebar do%>
     <%= render "skm/entry_headers/sidebar_navigate_menu"%>
