--- a/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
@@ -486,6 +486,7 @@
         display: block;
         font-style: italic;
         margin: 0;
+        text-indent: 0;
     }
     span.hedit-link {
         font-size: 10pt;
