修正wiki markdown解释方式

--- a/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/plugins/gollum/gollum.css.less
@@ -352,6 +352,7 @@
 
 .markdown-body table {
     padding: 0;
+    width: 100%;
 }
 
 .markdown-body table tr {
@@ -487,6 +488,9 @@
         font-style: italic;
         margin: 0;
         text-indent: 0;
+    }
+    span.table-alt {
+        text-indent: 2em;
     }
     span.hedit-link {
         font-size: 10pt;
