--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -69,7 +69,6 @@
           <% end %>
           <% if allow_to_function?(:assign_incident_request) %>
               <a id="assignRequest" href="javascript:void(0)" class="btn"><%= t(:label_icm_incident_request_assign) %></a>
-
           <% end %>
         </div>
     <% else %>
@@ -466,10 +465,15 @@
     <div class="sub-page-block">
       <div class="sub-page-block-header">
         <h3 class="sub-page-block-title">(<%= @incident_request[:incident_status_name] %>)[<%= @incident_request[:request_number] %>]<%= @incident_request[:title] %></h3>
-        <%- unless params[:format].eql?('pdf') -%>
-          <div style="margin-left: 15px; display:inline;">(<a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_icm_incident_less_info) %>" ExpandedText="<%= t(:label_icm_incident_more_info) %>"><%= t(:label_icm_incident_more_info) %></a>)</div>
-        <%- end -%>
+        <div style="margin-left: 15px; display:inline; float: right;">
+          <span>
+            <a href="javascript:void(0)" id="showMore" class="toggle-button" ref="incidentDetail" collapsedText="<%= t(:label_icm_incident_less_info) %>" ExpandedText="<%= t(:label_icm_incident_more_info) %>">
+              <i class="icon-chevron-down"></i>
+              <%= t(:label_icm_incident_more_info) %>
+            </a>
+          </span>
         </div>
+      </div>
       <div class="sub-page-block-body">
         <%= content_for :block_header_content %>
         <%= content_for :change_request_tab %>
@@ -485,19 +489,19 @@
             var me = $(element);
             var ref = $("#" + me.attr("ref"));
             if (ref.hasClass("hidden")) {
-                me.html(me.attr("expandedText"));
+                me.html('<i class="icon-chevron-down"></i>'+ me.attr("expandedText"));
             } else {
-                me.html(me.attr("collapsedText"));
+                me.html('<i class="icon-chevron-up"></i>'+ me.attr("collapsedText"));
             }
         });
         $(".toggle-button").bind("click", function(event) {
             var me = $(this);
             var ref = $("#" + me.attr("ref"));
             if (ref.hasClass("hidden")) {
-                me.html(me.attr("collapsedText"));
+                me.html('<i class="icon-chevron-up"></i>'+ me.attr("collapsedText"));
                 ref.removeClass("hidden");
             } else {
-                me.html(me.attr("expandedText"));
+                me.html('<i class="icon-chevron-down"></i>'+ me.attr("expandedText"));
                 ref.addClass("hidden");
             }
         });
