--- a/modules/skm/app/views/skm/books/index.html.erb
+++ b/modules/skm/app/views/skm/books/index.html.erb
@@ -7,6 +7,7 @@
     </td>
     <td class="page-block-button">
       <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+      <%= link_to t(:label_skm_wiki), {:controller=>"skm/wikis",:action => "index"}, :class => "btn" %>
     </td>
     <td class="page-block-help">
       <div id="searchBox"></div>
