添加无结果友情提示. 补全国际化的英文资源文件

--- a/modules/10_ironmine_irm/app/views/irm/search/_search.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/search/_search.html.erb
@@ -164,7 +164,15 @@
               <!-- 显示没有搜索结果提示 -->
               <% else %>
               <div class="alert alert-block" style="margin: 20px 0 0;">
-                <strong>Oh sorry! Please try again.</strong>
+                <p>
+                  <strong>Oh sorry! Please try again and check as the following:</strong>
+                </p>
+                <ul style="margin: 10px 5px;">
+                  <li><%= t :label_search_no_result_alert_1 %></li>
+                  <li><%= t :label_search_no_result_alert_2 %></li>
+                  <li><%= t :label_search_no_result_alert_3 %></li>
+                  <li><%= t :label_search_no_result_alert_4 %></li>
+                </ul>
               </div>
               <% end %>
             </span>
