修正wiki上的链接显示与分页

--- a/modules/80_bootstrap_bsp/app/views/layouts/markdown_pdf.html.erb
+++ b/modules/80_bootstrap_bsp/app/views/layouts/markdown_pdf.html.erb
@@ -7,7 +7,7 @@
         .markdown-body{
             font-family: inherit;
         }
-        hr{page-break-after: always;visibility:hidden; }
+        br.page-break{page-break-after: always;visibility:hidden; }
     </style>
   </head>
   <body>
