--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/plugins/gollum/gollum.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/plugins/gollum/gollum.css.less
@@ -179,6 +179,11 @@
     margin-bottom: 0 !important;
 }
 
+.markdown-body a {
+    color: #0088CC;
+    text-decoration: none;
+}
+
 .markdown-body a.absent {
     color: #CC0000;
 }
@@ -261,7 +266,6 @@
 }
 
 .markdown-body hr {
-    background: url("https://a248.e.akamai.net/assets.github.com/images/modules/pulls/dirty-shade.png?1b313442") repeat-x scroll 0 0 transparent;
     border: 0 none;
     color: #CCCCCC;
     height: 4px;
@@ -590,8 +594,8 @@
         }
     }
 
-    span.align-center,span.align-right{
-        span.img-alt{
+    span.align-center, span.align-right {
+        span.img-alt {
             text-indent: 0;
             margin: 0;
         }
