--- a/modules/30_knowledge_skm/app/views/skm/wikis/preview.html.erb
+++ b/modules/30_knowledge_skm/app/views/skm/wikis/preview.html.erb
@@ -12,7 +12,7 @@
   </tr></table>
   <div class="page-block-body">
     <div class="markdown-body" style="width: 551pt;text-align: left;margin: 0 auto;">
-      <%=raw show_wiki(@preview,@wiki.name,@wiki.id,:preview) %>
+      <%=raw show_wiki(@wiki,true) %>
     </div>
   </div>
 </div>
