--- a/modules/30_knowledge_skm/app/views/skm/wikis/show.html.erb
+++ b/modules/30_knowledge_skm/app/views/skm/wikis/show.html.erb
@@ -8,13 +8,14 @@
       <h2 class="block-title"></h2>
     </td>
     <td class="page-block-button">
-      <%= link_to t(:edit), {:action => "edit", :id => @wiki,:x=>"ccc",:y=>"bbbb"},:class=>"btn"%>
+      <%= link_to t(:edit), {:action => "edit", :id => @wiki},:class=>"btn"%>
+      <%= link_to t(:export), {:action => "show", :id => @wiki,:format=>:pdf,},:target=>"_blank",:class=>"btn"%>
       <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
     </td>
   </tr></table>
   <div class="page-block-body">
     <div class="markdown-body" style="width: 551pt;text-align: left;margin: 0 auto;">
-      <%=raw show_wiki(@wiki.page,@wiki.name,@wiki.id) %>
+      <%=raw show_wiki(@wiki) %>
     </div>
   </div>
 </div>
