新建知识库模板元素中去除操作元素

--- a/modules/30_knowledge_skm/app/views/skm/entry_templates/get_owned_elements_data.html.erb
+++ b/modules/30_knowledge_skm/app/views/skm/entry_templates/get_owned_elements_data.html.erb
@@ -1,15 +1,17 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
-  <% builder.column(:id,{:title=>t(:operation), :width => "100px"}) do |data|%>
-    <%= bootstrap_icons("icon-arrow-up", t(:move_up), {:controller => "skm/entry_templates", :action => "up_element", :element_id => data[:id], :template_id => @template_id})%>&nbsp;
-    <%= bootstrap_icons("icon-arrow-down", t(:move_down), {:controller => "skm/entry_templates", :action => "down_element", :element_id => data[:id], :template_id => @template_id})%>&nbsp;
-    <%= bootstrap_icons("icon-trash",t(:remove),{:controller => "skm/entry_templates", :action => "remove_element", :element_id => data[:id], :template_id => @template_id}) %>&nbsp;
-    <%= bootstrap_icons("icon-edit",t(:remove),{:controller => "skm/entry_templates", :action => "edit_detail", :id => data[:detail_id]}) %>
-  <% end %>
-  <% builder.column(:detail_required_flag,{:title=>t(:label_skm_entry_template_element_required),:width => "40px"}) do |data|%>
-    <%= check_img(data[:detail_required_flag]) %>
+  <% unless params[:operation] and params[:operation].eql?('false') %>
+      <% builder.column(:id,{:title=>t(:operation), :width => "100px"}) do |data|%>
+        <%= bootstrap_icons("icon-arrow-up", t(:move_up), {:controller => "skm/entry_templates", :action => "up_element", :element_id => data[:id], :template_id => @template_id})%>&nbsp;
+        <%= bootstrap_icons("icon-arrow-down", t(:move_down), {:controller => "skm/entry_templates", :action => "down_element", :element_id => data[:id], :template_id => @template_id})%>&nbsp;
+        <%= bootstrap_icons("icon-trash",t(:remove),{:controller => "skm/entry_templates", :action => "remove_element", :element_id => data[:id], :template_id => @template_id}) %>&nbsp;
+        <%= bootstrap_icons("icon-edit",t(:edit),{:controller => "skm/entry_templates", :action => "edit_detail", :id => data[:detail_id]}) %>
+      <% end %>
   <% end %>
   <% builder.column(:entry_template_element_code,{:title=>t(:label_skm_entry_template_element_code)})%>
   <% builder.column(:name,{:title=>t(:name)})%>
   <% builder.column(:description,{:title=>t(:description)})%>
+  <% builder.column(:detail_required_flag,{:title=>t(:label_skm_entry_template_element_required),:width => "40px"}) do |data|%>
+    <%= check_img(data[:detail_required_flag]) %>
+  <% end %>
   <% builder.column(:detail_rows,{:title=>t(:label_skm_entry_template_element_rows)})%>
 <% end %>
